mule-user-guide/v/3.3/application-format.adoc
= Mule Application Format

The deployment unit of a Mule application encapsulates everything an application needs to function, such as libraries, custom code, configuration, deployment descriptor and any environment properties accompanying the application. It exists in one of two formats:

* `.zip` file (a regular archive with a 'zip' extension)
* unpacked version of the same `.zip` file (exploded app)

----
/
 \- classes                 // application-specific expanded resources (e.g.      logging configuration files, properties, etc
 |- lib                     // application-specific jars
 |- mule-config.xml         // Main Mule configuration file, also monitored for changes
 |- mule-deploy.properties  // Application deployment descriptor (optional)
 |- mule-app.properties     // custom properties to be added to the registry instance used by the application (optional)
 |- *.grf files             // produced by DataMapper to plot its data mapping

----

Mule supports the deployment of both packaged (zipped) and exploded (unzipped) applications.

You can share libraries between applications via the link:https://docs.mulesoft.com/mule-user-guide/v/3.5/deployment-descriptor[domain deployment descriptor]
